--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to Tomoraji</h1>
+  <h1>tomoraji</h1>
   <p>Live audio streaming platform for creators and listeners.</p>
   <a class="button" href="login.html">Streamer Login</a>
 </body>
